add range input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,8 @@ h4 {
 
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
 
-#welcome-main {
+#welcome {
+  text-align: left;
   max-width: 960px;
   margin-inline: auto;
   margin-top: 120px;
@@ -99,14 +100,46 @@ h4 {
   line-height: 1.3;
 }
 
-#welcome ul {
+.instrucrion-list {
   padding-left: 30px;
+}
+
+#welcome ul {
   line-height: 1.6;
-  margin-bottom: 150px;
+  margin-bottom: 50px;
+
 }
 
 #welcome form * {
   display: inline-block;
+}
+
+#welcome .cont-range {
+  margin-bottom: 50px;
+  width: 700px;
+  text-align: left;
+}
+
+
+.cont-range input#rangeValue {
+  display: block;
+  border: 4px solid yellow;
+  appearance: none;
+  width: 500px;
+  height: 6px;
+  border-radius: 10px;
+  border: 1px solid white;
+  outline: none;
+  box-shadow: 0 1px 3px white;
+}
+
+
+
+
+
+.cont-range ul li:not(.cont-range u li:last-child) {
+  display: inline-block;
+  padding-right: 140px;
 }
 
 /* ----------------------------------- PERSONALIZZAZIONE DEL CHECKBOX -----------------------------------  */
@@ -229,6 +262,7 @@ header circle+circle:hover {
   margin-top: 135px;
   max-width: 900px;
   margin-inline: auto;
+  display: none;
 }
 
 .exam-form-padding-top {
