--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,10 @@ h4 {
   display: inline-block;
 }
 
+.universal-style-btn {
+  
+}
+
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
 
 #welcome {
