--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,17 @@ body {
 }
 
 header {
-  padding-inline: 125px;
-  padding-top: 40px;
+  text-align: left;
+  padding-top: 50px;
 }
 
 header img {
-  width: 150px;
+  width: 160px;
+}
+
+header, main {
+  max-width: 960px;
+  margin-inline: auto;
 }
 
 main {
@@ -70,20 +75,32 @@ h4 {
 }
 
 .universal-style-btn-ns {
-  
+  float: right;
+  background-color: transparent;
+  box-shadow: 0px 0px 11px 3px #00626a;
+  border: 3px solid white;
+  color: white;
+  padding-inline: 55px;
+  padding-block: 16px;
+  font-size: 1.4rem;
+  font-weight: 800;
+  font-family: 'Outfit', sans-serif;
 }
 
 .universal-style-btn-slc {
-  
+  background-color: #00ffff;
+  color: black;
+  box-shadow: 0px 0px 20px 4px #53e0e0;
+  border: none;
+  cursor: pointer;
 }
 
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
 
 #welcome {
   text-align: left;
-  max-width: 960px;
   margin-inline: auto;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 #welcome h1 {
@@ -182,7 +199,7 @@ h4 {
 
 /* ----------------------------------- FINE PERSONALIZZAZIONE DEL CHECKBOX -----------------------------------  */
 
-#proceed {
+/* #proceed {
   float: right;
   background-color: transparent;
   box-shadow: 0px 0px 11px 3px #00626a;
@@ -193,15 +210,15 @@ h4 {
   font-size: 1.4rem;
   font-weight: 800;
   font-family: 'Outfit', sans-serif;
-}
-
+} */
+/* 
 #proceed.proceed-checked {
   background-color: #00ffff;
   color: black;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
   cursor: pointer;
-}
+} */
 
 /* ----------------------------------- FINE WELCOME STYLE -----------------------------------  */
 
@@ -298,7 +315,7 @@ header circle+circle {
   margin-inline: auto;
 }
 
-#exam button {
+#exam button:not(#avanti) {
   border: 2px solid grey;
   background-color: transparent;
   font-size: 1rem;
@@ -312,12 +329,12 @@ header circle+circle {
   margin: 0 20px 20px;
 }
 
-#exam .container-buttons button:hover {
+#exam .container-buttons button:not(#avanti):hover {
   background-color: #8e0665;
   cursor: pointer;
 }
 
-#exam button.button-clicked {
+#exam button:not(#avanti).button-clicked {
   background-color: #d20094;
 }
 
@@ -344,7 +361,7 @@ button#avanti {
   padding-top: 30px;
   left: 125px
 }
-
+/* 
 button#avanti {
   margin: 0;
   border-radius: 0;
@@ -361,13 +378,13 @@ button#avanti {
   font-size: 1.4rem;
   font-weight: 700;
   font-family: 'Outfit', sans-serif;
-}
+} */
 
 #exam p,
 button#avanti {
   bottom: 100px;
 }
-
+/* 
 button#avanti.selected-avanti {
   background-color: #00ffff;
   color: black;
@@ -375,7 +392,7 @@ button#avanti.selected-avanti {
   border: none;
   cursor: pointer;
   font-weight: bold;
-}
+} */
 
 /* ----------------------------------- FINE EXAM STYLE -----------------------------------  */
 
@@ -462,7 +479,7 @@ button#avanti.selected-avanti {
   text-align: right;
 }
 
-#results button {
+/* #results button {
   width: 220px;
   height: 60px;
   background-color: transparent;
@@ -473,17 +490,17 @@ button#avanti.selected-avanti {
   box-shadow: 0px 0px 11px 3px #00626a;
   cursor: pointer;
   font-family: "Outfit", sans-serif;
-}
+} */
 
 /* ----------------------------------- FINE RESULT STYLE -----------------------------------  */
 
 /* ----------------------------------- INIZIO FEEDBACK STYLE -----------------------------------  */
-#results button:hover {
+/* #results button:hover {
   background-color: #00FFFF;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   color: black;
   border: none;
-}
+} */
 
 #result,
 #feedback {
@@ -522,7 +539,6 @@ button#avanti.selected-avanti {
 
 #feedback #img-stelle>img.selected-stars {
   filter: none;
-
 }
 
 #feedback #img-stelle img.clicked-star {
@@ -548,13 +564,13 @@ button#avanti.selected-avanti {
   padding: 0 0 10px 25px;
   font-size: 21px;
 }
-
+/* 
 #feedback form button {
   text-align: center;
   float: unset;
   margin-top: 65px;
   color: black;
-}
+} */
 
 /* ----------------------------------- FINE FEEDBACK STYLE -----------------------------------  */
 
