--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,6 @@ h4 {
 #welcome ul {
   line-height: 1.6;
   margin-bottom: 50px;
-
 }
 
 #welcome form * {
@@ -120,7 +119,6 @@ h4 {
   text-align: left;
 }
 
-
 .cont-range input#rangeValue {
   display: block;
   appearance: none;
@@ -131,10 +129,6 @@ h4 {
   outline: none;
   box-shadow: 0 1px 3px white;
 }
-
-
-
-
 
 .cont-range ul li:not(.cont-range u li:last-child) {
   display: inline-block;
@@ -149,7 +143,7 @@ h4 {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input+label {
+#welcome form input + label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -157,7 +151,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input+label::before {
+#welcome form input + label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -169,7 +163,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked+label::before {
+#welcome form input:checked + label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -187,7 +181,7 @@ h4 {
   padding-block: 16px;
   font-size: 1.4rem;
   font-weight: 800;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 #proceed.proceed-checked {
@@ -229,7 +223,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle+circle {
+header circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -260,7 +254,6 @@ header circle+circle {
 #countdown-text p:last-child {
   font-size: 0.5rem;
 }
-
 
 #exam {
   text-align: center;
@@ -337,7 +330,7 @@ button#avanti {
 
 .form-footer p {
   padding-top: 30px;
-  left: 125px
+  left: 125px;
 }
 
 button#avanti {
@@ -355,7 +348,7 @@ button#avanti {
   padding-block: 16px;
   font-size: 1.4rem;
   font-weight: 700;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 #exam p,
@@ -405,7 +398,7 @@ button#avanti.selected-avanti {
 }
 
 .result-grafic svg {
-  stroke: #C2128D;
+  stroke: #c2128d;
   width: 400px;
   height: 400px;
 }
@@ -417,15 +410,15 @@ button#avanti.selected-avanti {
   /* transform-origin: top; */
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
-  stroke: #00FFFF;
+  stroke: #00ffff;
   stroke-width: 61;
   stroke-dasharray: 1004.8;
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   stroke-dasharray: 702.4 1004.8;
 }
 
@@ -470,11 +463,24 @@ button#avanti.selected-avanti {
   font-family: "Outfit", sans-serif;
 }
 
+#review {
+  display: none;
+  border: 2px solid white;
+  border-radius: 20px;
+}
+
+#review > div {
+  background-color: darkviolet;
+  border: 2px solid white;
+  border-radius: 20px;
+  margin: 20px;
+}
+
 /* ----------------------------------- FINE RESULT STYLE -----------------------------------  */
 
 /* ----------------------------------- INIZIO FEEDBACK STYLE -----------------------------------  */
 #results button:hover {
-  background-color: #00FFFF;
+  background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   color: black;
   border: none;
@@ -491,7 +497,7 @@ button#avanti.selected-avanti {
 }
 
 #feedback-main {
-  margin-top: 175px
+  margin-top: 175px;
 }
 
 #feedback h2 {
@@ -515,9 +521,8 @@ button#avanti.selected-avanti {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle>img.selected-stars {
+#feedback #img-stelle > img.selected-stars {
   filter: none;
-
 }
 
 #feedback #img-stelle img.clicked-star {
