--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,9 @@ h4 {
   font-family: "Outfit", sans-serif;
 }
 
-.universal-style-btn-slc, #rate-us:hover, #your-answers:hover {
+.universal-style-btn-slc,
+#rate-us:hover,
+#your-answers:hover {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   color: black;
@@ -438,14 +440,14 @@ button#avanti {
 
 #review {
   display: none;
-  border: 2px solid white;
   border-radius: 20px;
   width: 960px;
   margin: 50px auto;
+  padding-inline: 50px;
 }
 
 #review > div {
-  background-color: darkviolet;
+  background: linear-gradient(#d20094, #900080);
   border: 2px solid white;
   border-radius: 20px;
   margin: 20px;
