--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -446,11 +446,27 @@ button#avanti {
   padding-inline: 50px;
 }
 
+/* #review > div::before {
+  content: "";
+  height: 50px;
+  width: 200px;
+  border: double 4px transparent;
+  border-radius: 50%;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, #f00, #3020ff);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+} */
+
 #review > div {
-  background: linear-gradient(#d20094, #900080);
   border: 2px solid white;
   border-radius: 20px;
   margin: 20px;
+  border: double 6px transparent;
+  border-radius: 20px;
+  background-image: linear-gradient(#d20094, #900080), radial-gradient(circle at top left, white, transparent);
+  /* background: linear-gradient(#d20094, #900080); */
+  background-origin: border-box;
+  background-clip: content-box, border-box;
 }
 
 #review > div > p {
