--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,8 @@ header img {
   width: 160px;
 }
 
-header, main {
+header,
+main {
   max-width: 960px;
   margin-inline: auto;
 }
@@ -87,7 +88,8 @@ h4 {
   font-family: 'Outfit', sans-serif;
 }
 
-.universal-style-btn-slc, #rate-us:hover {
+.universal-style-btn-slc,
+#rate-us:hover {
   background-color: #00ffff;
   color: black;
   box-shadow: 0px 0px 20px 4px #53e0e0;
@@ -176,7 +178,7 @@ h4 {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input + label {
+#welcome form input+label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -184,7 +186,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input + label::before {
+#welcome form input+label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -196,7 +198,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked + label::before {
+#welcome form input:checked+label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -231,7 +233,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle + circle {
+header circle+circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -294,226 +296,239 @@ header circle + circle {
   margin-inline: auto;
 }
 
-#exam button:not(#avanti) {
-  border: 2px solid grey;
-  background-color: transparent;
+#exam .buttons {
   font-size: 1rem;
   width: 340px;
   min-height: 70px;
-  border-radius: 35px;
-  background: rgba(255, 255, 255, 0.05);
-  color: white;
+  /* background: rgba(255, 255, 255, 0.05);*/
+  color: black;
   font-weight: bold;
   font-family: "Inter", sans-serif;
   margin: 0 20px 20px;
-}
 
-#exam .container-buttons button:not(#avanti):hover {
-  background-color: #8e0665;
-  cursor: pointer;
-}
+  .transparent-box {
+    width: 300px;
+    height: 200px;
+    border: 10px solid transparent;
+    border-image: linear-gradient(45deg, #f06, #9f6) 1;
+    border-radius: 40px;
+    background: linear-gradient(45deg,
+        rgba(255, 255, 255, 0),
+        rgba(255, 255, 255, 0.5));
+    padding: 20px;
 
-#exam button:not(#avanti).button-clicked {
-  background-color: #d20094;
-}
 
-#exam p {
-  display: inline-block;
-}
+  }
 
-.container-buttons {
-  max-width: 800px;
-  margin: 0 auto;
-}
+  #exam .container-buttons button:not(#avanti):hover {
+    background-color: #8e0665;
+    cursor: pointer;
 
-.form-footer {
-  text-align: left;
-}
+  }
 
-#exam p,
-button#avanti {
-  position: relative;
-  top: 120px;
-}
+  #exam button:not(#avanti).button-clicked {
+    background-color: #d20094;
+  }
 
-.form-footer p {
-  padding-top: 30px;
-}
+  #exam p {
+    display: inline-block;
+  }
 
-/* ----------------------------------- FINE EXAM STYLE -----------------------------------  */
+  .container-buttons {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 
-/* ----------------------------------- INIZIO RESULT STYLE -----------------------------------  */
+  .form-footer {
+    text-align: left;
+  }
 
-#results {
-  text-align: center;
-  display: none;
-  max-width: 940px;
-  margin-inline: auto;
-  margin-top: 90px;
-  vertical-align: middle;
-}
+  #exam p,
+  button#avanti {
+    position: relative;
+    top: 120px;
+  }
 
-#results h2 {
-  margin-bottom: 5px;
-}
+  .form-footer p {
+    padding-top: 30px;
+  }
 
-.cont-results {
-  margin-top: 50px;
-}
+  /* ----------------------------------- FINE EXAM STYLE -----------------------------------  */
 
-.result-grafic {
-  width: 400px;
-  height: 500px;
-  color: white;
-  text-align: center;
-  display: inline-block;
-  vertical-align: sub;
-  margin-inline: 50px;
-  vertical-align: middle;
-}
+  /* ----------------------------------- INIZIO RESULT STYLE -----------------------------------  */
 
-.result-grafic svg {
-  stroke: #c2128d;
-  width: 400px;
-  height: 400px;
-}
+  #results {
+    text-align: center;
+    display: none;
+    max-width: 940px;
+    margin-inline: auto;
+    margin-top: 90px;
+    vertical-align: middle;
+  }
 
-.result-grafic circle {
-  stroke-width: 60;
-  stroke-dasharray: 1004.8;
-  fill: transparent;
-  /* transform-origin: top; */
-}
+  #results h2 {
+    margin-bottom: 5px;
+  }
 
-.result-grafic circle + circle {
-  transform: rotate(90deg) scaleX(-1);
-  transform-origin: 50%;
-  stroke: #00ffff;
-  stroke-width: 61;
-  stroke-dasharray: 1004.8;
-}
+  .cont-results {
+    margin-top: 50px;
+  }
 
-.result-grafic circle + circle {
-  stroke-dasharray: 702.4 1004.8;
-}
+  .result-grafic {
+    width: 400px;
+    height: 500px;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    vertical-align: sub;
+    margin-inline: 50px;
+    vertical-align: middle;
+  }
 
-.resutGrafic-text {
-  position: absolute;
-  margin-top: 130px;
-  margin-left: 100px;
-}
+  .result-grafic svg {
+    stroke: #c2128d;
+    width: 400px;
+    height: 400px;
+  }
 
-.resutGrafic-text p {
-  max-width: 200px;
-}
+  .result-grafic circle {
+    stroke-width: 60;
+    stroke-dasharray: 1004.8;
+    fill: transparent;
+    /* transform-origin: top; */
+  }
 
-.exam-not-approved {
-  padding-top: 85px;
-  padding-inline: 50px;
-}
+  .result-grafic circle+circle {
+    transform: rotate(90deg) scaleX(-1);
+    transform-origin: 50%;
+    stroke: #00ffff;
+    stroke-width: 61;
+    stroke-dasharray: 1004.8;
+  }
 
-.answer-result {
-  max-width: 200px;
-  display: inline-block;
-}
+  .result-grafic circle+circle {
+    stroke-dasharray: 702.4 1004.8;
+  }
 
-.corrects-result {
-  text-align: left;
-}
+  .resutGrafic-text {
+    position: absolute;
+    margin-top: 130px;
+    margin-left: 100px;
+  }
 
-.wrongs-result {
-  text-align: right;
-}
+  .resutGrafic-text p {
+    max-width: 200px;
+  }
 
-#rate-us, #more-info {
-  float: unset;
-}
+  .exam-not-approved {
+    padding-top: 85px;
+    padding-inline: 50px;
+  }
 
-#review {
-  display: none;
-  border: 2px solid white;
-  border-radius: 20px;
-  width: 960px;
-  margin: 0 auto;
-}
+  .answer-result {
+    max-width: 200px;
+    display: inline-block;
+  }
 
-#review > div {
-  background-color: darkviolet;
-  border: 2px solid white;
-  border-radius: 20px;
-  margin: 20px;
-}
-/* ----------------------------------- FINE RESULT STYLE -----------------------------------  */
+  .corrects-result {
+    text-align: left;
+  }
 
-/* ----------------------------------- INIZIO FEEDBACK STYLE -----------------------------------  */
+  .wrongs-result {
+    text-align: right;
+  }
 
-#result,
-#feedback {
-  font-family: "Outfit", sans-serif;
-  text-align: center;
-}
+  #rate-us,
+  #more-info {
+    float: unset;
+  }
 
-#feedback #img-stelle img {
-  filter: grayscale(100%) brightness(20%);
-}
+  #review {
+    display: none;
+    border: 2px solid white;
+    border-radius: 20px;
+    width: 960px;
+    margin: 0 auto;
+  }
 
-#feedback-main {
-  margin-top: 175px;
-}
+  #review>div {
+    background-color: darkviolet;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin: 20px;
+  }
 
-#feedback h2 {
-  margin-bottom: 25px;
-  font-weight: bold;
-}
+  /* ----------------------------------- FINE RESULT STYLE -----------------------------------  */
 
-#feedback p {
-  font-size: 1.8rem;
-  max-width: 720px;
-  margin-inline: auto;
-}
+  /* ----------------------------------- INIZIO FEEDBACK STYLE -----------------------------------  */
 
-/* Per vedere le stelle in azzurro */
-.selected-stars {
-  filter: none;
-}
+  #result,
+  #feedback {
+    font-family: "Outfit", sans-serif;
+    text-align: center;
+  }
 
-#img-stelle {
-  margin-top: 40px;
-  margin-bottom: 70px;
-}
+  #feedback #img-stelle img {
+    filter: grayscale(100%) brightness(20%);
+  }
 
-#feedback #img-stelle > img.selected-stars {
-  filter: none;
-}
+  #feedback-main {
+    margin-top: 175px;
+  }
 
-#feedback #img-stelle img.clicked-star {
-  filter: drop-shadow(0 0 10px white);
-}
+  #feedback h2 {
+    margin-bottom: 25px;
+    font-weight: bold;
+  }
 
-#img-stelle img:not(:last-child) {
-  padding-right: 20px;
-}
+  #feedback p {
+    font-size: 1.8rem;
+    max-width: 720px;
+    margin-inline: auto;
+  }
 
-#feedback form {
-  margin-top: 50px;
-  max-width: 770px;
-  margin-inline: auto;
-  background-color: transparent;
-}
+  /* Per vedere le stelle in azzurro */
+  .selected-stars {
+    filter: none;
+  }
 
-#feedback form input {
-  all: unset;
-  text-align: left;
-  width: 100%;
-  border-bottom: 1px solid #c2128d;
-  padding: 0 0 10px 25px;
-  font-size: 21px;
-}
+  #img-stelle {
+    margin-top: 40px;
+    margin-bottom: 70px;
+  }
 
-#more-info {
-  margin-top: 60px;
-}
+  #feedback #img-stelle>img.selected-stars {
+    filter: none;
+  }
 
-/* ----------------------------------- FINE FEEDBACK STYLE -----------------------------------  */
+  #feedback #img-stelle img.clicked-star {
+    filter: drop-shadow(0 0 10px white);
+  }
 
-/* commento */
+  #img-stelle img:not(:last-child) {
+    padding-right: 20px;
+  }
+
+  #feedback form {
+    margin-top: 50px;
+    max-width: 770px;
+    margin-inline: auto;
+    background-color: transparent;
+  }
+
+  #feedback form input {
+    all: unset;
+    text-align: left;
+    width: 100%;
+    border-bottom: 1px solid #c2128d;
+    padding: 0 0 10px 25px;
+    font-size: 21px;
+  }
+
+  #more-info {
+    margin-top: 60px;
+  }
+
+  /* ----------------------------------- FINE FEEDBACK STYLE -----------------------------------  */
+
+  /* commento */
