--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,24 +96,29 @@ h4 {
   cursor: pointer;
 }
 
-#rate-us {
-  float: left;
-}
-
-#your-answers {
-  float: right;
-}
-
-#more-info {
+#more-info, #rate-us, #your-answers {
   float: unset;
+}
+
+#rate-us {
+  margin-right: 126px;
+}
+
+#rate-us, #your-answers {
+  width: 290px;
+  height: 62px;
 }
 
 .azzurro {
   color: #00ffff;
 }
 
-.rosso {
+.rosso, .fa-solid.fa-xmark {
   color: red;
+}
+
+.fa-solid.fa-check {
+  color: #00ff00;
 }
 
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
@@ -179,6 +184,17 @@ h4 {
 .cont-range ul li:not(.cont-range u li:last-child) {
   display: inline-block;
   padding-right: 170px;
+}
+
+#review > div > p.padding-left {
+  padding-left: 8px;
+  font-size: 1.1rem;
+
+}
+
+.font-size-q {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 /* ----------------------------------- PERSONALIZZAZIONE DEL CHECKBOX -----------------------------------  */
@@ -440,26 +456,27 @@ button#avanti {
 
 #review {
   display: none;
+  max-width: 850px;
   border-radius: 20px;
-  width: 960px;
   margin: 50px auto;
-  padding-inline: 50px;
 }
 
 #review > div {
-  background: linear-gradient(#d20094, #900080);
-  border: 2px solid white;
-  border-radius: 20px;
-  margin: 20px;
+  border-bottom: 2px solid white;
+  margin-block: 30px;
+  text-align: left;
 }
 
 #review > div > p {
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
 #review > div > p.hiddenAnswer {
   display: none;
+}
+i.fa-solid.fa-xmark, i.fa-solid.fa-check {
+  padding-inline: 10px;
 }
 
 /* ----------------------------------- FINE RESULT STYLE -----------------------------------  */
