--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,26 +462,9 @@ button#avanti {
 }
 
 #review > div {
-  display: inline-block;
-  position: relative;
-  z-index: 0;
-  background: linear-gradient(#d20094, #900080);
-  border-radius: 20px;
-  background-clip: content-box, border-box;
-}
-
-#review > div::before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-  padding: 6px;
-  border-radius: 20px;
-  background: linear-gradient(to bottom right, white, transparent);
-  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-  -webkit-mask-composite: xor;
-  mask-composite: exclude;
+  border-bottom: 2px solid white;
+  margin-block: 30px;
+  text-align: left;
 }
 
 #review > div > p {
