--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ h4 {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input + label {
+#welcome form input+label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -197,7 +197,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input + label::before {
+#welcome form input+label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -209,7 +209,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked + label::before {
+#welcome form input:checked+label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -244,7 +244,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle + circle {
+header circle+circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -307,27 +307,35 @@ header circle + circle {
   margin-inline: auto;
 }
 
-#exam button:not(#avanti) {
+/* #exam button:not(#avanti) {
   border: 2px solid grey;
   background-color: transparent;
   font-size: 1rem;
   width: 340px;
   min-height: 70px;
-  border-radius: 35px;
-  background: rgba(255, 255, 255, 0.05);
-  color: white;
-  font-weight: bold;
-  font-family: "Inter", sans-serif;
-  margin: 0 20px 20px;
-}
+  border: 2px solid white;
+  border-radius: 20px;
+  margin: 20px;
+  border: double 6px transparent;
+  border-radius: 20px;
+  background-image: linear-gradient(#d20094, #900080), radial-gradient(circle at top left, white, transparent);
+  background: linear-gradient(#d20094, #900080);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+} */
+
+
+
 
 #exam .container-buttons button:not(#avanti):hover {
   background-color: #8e0665;
   cursor: pointer;
 }
 
-#exam button:not(#avanti).button-clicked {
-  background-color: #d20094;
+#exam .examButtons:not(#avanti).button-clicked {
+  background: linear-gradient(#d20094, #900080);
+  border-radius: 35px;
+
 }
 
 #exam p {
@@ -336,18 +344,66 @@ header circle + circle {
 
 .container-buttons {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0 auto 80px;
+
+}
+
+
+.wrap {
+  display: inline-block;
+  width: 47%;
+  margin: 10px;
+}
+
+#exam .examButtons {
+  width: 100%;
+  padding: 30px;
+  display: inline-block;
+  position: relative;
+  z-index: 0;
+  margin: 40px;
+  font-size: 1rem;
+  margin: 10px;
+
+
+}
+
+#exam .examButtons::before {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  padding: 4px;
+  margin: -4px;
+  border-radius: 35px;
+  background: linear-gradient(170deg, white, transparent);
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+
+#exam .examButtons:hover {
+  background: linear-gradient(#d20094, #900080);
+  border-radius: 35px;
 }
 
 .form-footer {
   text-align: left;
 }
 
-#exam p,
+/* #exam p,
 button#avanti {
   position: relative;
   top: 120px;
-}
+} */
 
 .form-footer p {
   padding-top: 30px;
@@ -398,7 +454,7 @@ button#avanti {
   /* transform-origin: top; */
 }
 
-.result-grafic circle + circle {
+.result-grafic circle+circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
@@ -406,7 +462,7 @@ button#avanti {
   stroke-dasharray: 1004.8;
 }
 
-.result-grafic circle + circle {
+.result-grafic circle+circle {
   stroke-dasharray: 702.4 1004.8;
 }
 
@@ -457,7 +513,7 @@ button#avanti {
   background-clip: padding-box, border-box;
 } */
 
-#review > div {
+#review>div {
   border: 2px solid white;
   border-radius: 20px;
   margin: 20px;
@@ -469,12 +525,12 @@ button#avanti {
   background-clip: content-box, border-box;
 }
 
-#review > div > p {
+#review>div>p {
   padding: 10px;
   transition: display 2s;
 }
 
-#review > div > p.hiddenAnswer {
+#review>div>p.hiddenAnswer {
   display: none;
 }
 
@@ -517,7 +573,7 @@ button#avanti {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle > img.selected-stars {
+#feedback #img-stelle>img.selected-stars {
   filter: none;
 }
 
