--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,10 +190,9 @@ h4 {
   padding-right: 170px;
 }
 
-#review>div>p.padding-left {
+#review > div > p.padding-left {
   padding-left: 8px;
   font-size: 1.1rem;
-
 }
 
 .font-size-q {
@@ -209,7 +208,7 @@ h4 {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input+label {
+#welcome form input + label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -217,7 +216,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input+label::before {
+#welcome form input + label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -229,7 +228,7 @@ h4 {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked+label::before {
+#welcome form input:checked + label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -264,7 +263,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle+circle {
+header circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -327,26 +326,6 @@ header circle+circle {
   margin-inline: auto;
 }
 
-/* #exam button:not(#avanti) {
-  border: 2px solid grey;
-  background-color: transparent;
-  font-size: 1rem;
-  width: 340px;
-  min-height: 70px;
-  border: 2px solid white;
-  border-radius: 20px;
-  margin: 20px;
-  border: double 6px transparent;
-  border-radius: 20px;
-  background-image: linear-gradient(#d20094, #900080), radial-gradient(circle at top left, white, transparent);
-  background: linear-gradient(#d20094, #900080);
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-} */
-
-
-
-
 #exam .container-buttons button:not(#avanti):hover {
   background-color: #8e0665;
   cursor: pointer;
@@ -354,8 +333,7 @@ header circle+circle {
 
 #exam .examButtons:not(#avanti).button-clicked {
   background: linear-gradient(#d20094, #900080);
-  border-radius: 35px;
-
+  border-radius: 31px;
 }
 
 #exam p {
@@ -365,9 +343,7 @@ header circle+circle {
 .container-buttons {
   max-width: 800px;
   margin: 0 auto 80px;
-
 }
-
 
 .wrap {
   display: inline-block;
@@ -376,22 +352,17 @@ header circle+circle {
 }
 
 #exam .examButtons {
-  width: 100%;
-  padding: 30px;
   display: inline-block;
+  width: 47%;
+  padding: 30px;
   position: relative;
   z-index: 0;
   margin: 40px;
   font-size: 1rem;
   margin: 10px;
-
-
 }
 
 #exam .examButtons::before {
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 1;
   content: "";
   position: absolute;
   z-index: -1;
@@ -400,30 +371,20 @@ header circle+circle {
   margin: -4px;
   border-radius: 35px;
   background: linear-gradient(170deg, white, transparent);
-  -webkit-mask:
-    linear-gradient(#fff 0 0) content-box,
-    linear-gradient(#fff 0 0);
-  mask:
-    linear-gradient(#fff 0 0) content-box,
-    linear-gradient(#fff 0 0);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
 }
 
 #exam .examButtons:hover {
   background: linear-gradient(#d20094, #900080);
-  border-radius: 35px;
+  border-radius: 31px;
 }
 
 .form-footer {
   text-align: left;
 }
-
-/* #exam p,
-button#avanti {
-  position: relative;
-  top: 120px;
-} */
 
 .form-footer p {
   padding-top: 30px;
@@ -474,7 +435,7 @@ button#avanti {
   /* transform-origin: top; */
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
@@ -482,7 +443,7 @@ button#avanti {
   stroke-dasharray: 1004.8;
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   stroke-dasharray: 702.4 1004.8;
 }
 
@@ -521,18 +482,18 @@ button#avanti {
   margin: 50px auto;
 }
 
-#review>div {
+#review > div {
   border-bottom: 2px solid white;
   margin-block: 30px;
   text-align: left;
 }
 
-#review>div>p {
+#review > div > p {
   padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
-#review>div>p.hiddenAnswer {
+#review > div > p.hiddenAnswer {
   display: none;
 }
 
@@ -580,7 +541,7 @@ i.fa-solid.fa-check {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle>img.selected-stars {
+#feedback #img-stelle > img.selected-stars {
   filter: none;
 }
 
