add changes to script

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,7 @@ header circle+circle {
   margin: 40px;
   font-size: 1rem;
   margin: 10px;
+  vertical-align: middle;
 }
 
 #exam .examButtons::before {
