--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ header circle + circle {
   cursor: pointer;
 }
 
-#exam .examButtons:not(#avanti).button-clicked {
+#exam .exam-buttons:not(#avanti).button-clicked {
   background: linear-gradient(#d20094, #900080);
   border-radius: 31px;
 }
@@ -352,19 +352,20 @@ header circle + circle {
   margin: 10px;
 }
 
-#exam .examButtons {
+#exam .exam-buttons {
   display: inline-block;
   width: 47%;
   padding: 30px;
   position: relative;
   z-index: 0;
   margin: 40px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
   margin: 10px;
   vertical-align: middle;
 }
 
-#exam .examButtons::before {
+#exam .exam-buttons::before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -379,7 +380,7 @@ header circle + circle {
   mask-composite: exclude;
 }
 
-#exam .examButtons:hover {
+#exam .exam-buttons:hover {
   background: linear-gradient(#d20094, #900080);
   border-radius: 31px;
 }
