fixed form footer span color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,10 @@ header circle + circle {
   padding-top: 30px;
 }
 
+.form-footer span {
+  color: #d20094;
+}
+
 /* ----------------------------------- FINE EXAM STYLE -----------------------------------  */
 
 /* ----------------------------------- INIZIO RESULT STYLE -----------------------------------  */
