--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,15 +175,39 @@ h4 {
   text-align: left;
 }
 
-.cont-range input#rangeValue {
+/* Stile del pallino (Webkit) */
+input#rangeValue[type="range"] {
   display: block;
-  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   width: 500px;
-  height: 6px;
+  height: 20px;
+  background: #ddd;
   border-radius: 10px;
-  border: 1px solid white;
   outline: none;
-  box-shadow: 0 1px 3px white;
+}
+
+/* Stile del pallino (Webkit) */
+input#rangeValue[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 30px;
+  height: 30px;
+  background: rgb(0, 135, 219);
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+/* Stile del fondo dello slider (Webkit) */
+input#rangeValue[type="range"]::-webkit-slider-runnable-track {
+  background: linear-gradient(
+    to right,
+    #000599 0%,
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    #00fff0 100%
+  );
+  height: 30px;
+  border-radius: 15px;
 }
 
 .cont-range ul li:not(.cont-range u li:last-child) {
