--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ h4 {
 
 #welcome .cont-range {
   margin-bottom: 50px;
-  width: 700px;
+  max-width: 500px;
   text-align: left;
 }
 
@@ -179,7 +179,6 @@ h4 {
 input#rangeValue[type="range"] {
   display: block;
   -webkit-appearance: none;
-  -moz-appearance: none;
   width: 500px;
   height: 20px;
   background: #ddd;
@@ -210,9 +209,24 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   border-radius: 15px;
 }
 
-.cont-range ul li:not(.cont-range u li:last-child) {
-  display: inline-block;
-  padding-right: 170px;
+.cont-range ul {
+  position: relative;
+  width: 100%;
+}
+
+.cont-range ul > li {
+  cursor: pointer;
+}
+
+.cont-range ul #li2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cont-range ul #li3 {
+  float: right;
 }
 
 #review > div > p.margin-left {
@@ -366,26 +380,23 @@ header circle + circle {
 }
 
 .container-buttons {
-  max-width: 800px;
+  max-width: 900px;
   margin: 0 auto 80px;
-}
-
-.wrap {
-  display: inline-block;
-  width: 47%;
-  margin: 10px;
 }
 
 #exam .examButtons {
   display: inline-block;
-  width: 47%;
-  padding: 30px;
+  width: 45%;
+  padding: 25px;
   position: relative;
   z-index: 0;
   margin: 40px;
   font-size: 1rem;
-  margin: 10px;
+  margin: 20px;
   vertical-align: middle;
+  font-size: 1.3rem;
+  font-weight: 700;
+  font-family: "Outfit", sans-serif;
 }
 
 #exam .examButtons::before {
@@ -414,6 +425,10 @@ header circle + circle {
 
 .form-footer p {
   padding-top: 30px;
+}
+
+.form-footer p span {
+  color: #c2128d;
 }
 
 /* ----------------------------------- FINE EXAM STYLE -----------------------------------  */
