--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,19 +183,19 @@ input#rangeValue[type="range"] {
   display: block;
   -webkit-appearance: none;
   width: 500px;
-  height: 30px;
-  background: #ddd;
-  border-radius: 15px;
+  height: 26px;
+  background: rgb(0, 162, 255);
+  border-radius: 13px;
   outline: none;
 }
 
 /* Stile del pallino (Webkit) */
 input#rangeValue[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 30px;
-  height: 30px;
-  background: rgb(0, 135, 219);
-  border-radius: 15px;
+  width: 26px;
+  height: 26px;
+  background: #d20094;
+  border-radius: 13px;
   cursor: pointer;
 }
 
@@ -208,8 +208,8 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
     rgb(0, 162, 255) calc(100% * var(--percentage)),
     #00fff0 100%
   );
-  height: 30px;
-  border-radius: 15px;
+  height: 26px;
+  border-radius: 13px;
 }
 
 .cont-range ul {
