--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ strong {
 }
 
 h2 {
-  font-size: 3.2rem;
+  font-size: 3rem;
 }
 
 h3 {
@@ -303,6 +303,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 header svg {
   width: 120px;
   height: 120px;
+  filter: drop-shadow(5px 7px 10px #333);
 }
 
 header circle {
@@ -347,7 +348,7 @@ header circle + circle {
 
 #exam {
   text-align: center;
-  margin-top: 135px;
+  margin-top: 80px;
   max-width: 900px;
   margin-inline: auto;
   display: none;
@@ -362,7 +363,7 @@ header circle + circle {
 }
 
 #domanda {
-  min-height: 300px;
+  min-height: 240px;
   display: table;
   width: 100%;
 }
@@ -391,21 +392,21 @@ header circle + circle {
 }
 
 .container-buttons {
-  max-width: 900px;
-  margin: 0 auto 80px;
+  max-width: 830px;
+  height: 220px;
+  margin: 0 auto 40px;
 }
 
 #exam .exam-buttons {
   display: inline-block;
-  width: 45%;
+  width: 40%;
   padding: 25px;
   position: relative;
   z-index: 0;
   margin: 40px;
-  font-size: 1rem;
   margin: 20px;
   vertical-align: middle;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: 700;
   font-family: "Outfit", sans-serif;
 }
