--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,7 @@ button {
 }
 
 .universal-style-btn-slc,
+#more-info:hover,
 #rate-us:hover,
 #your-answers:hover {
   background-color: #00ffff;
@@ -102,6 +103,7 @@ button {
   cursor: pointer;
 }
 
+#send-feedback,
 #more-info,
 #rate-us,
 #your-answers {
@@ -664,8 +666,14 @@ i.fa-solid.fa-check {
   font-size: 21px;
 }
 
-#more-info {
+#send-feedback {
   margin-top: 60px;
 }
 
 /* ----------------------------------- FINE FEEDBACK STYLE -----------------------------------  */
+
+#NoGoodFeedback,
+#MidGoodFeedback,
+#VeryGoodFeedback {
+  display: none;
+}
